k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
  labels:
    app: nextjs-app
spec:
  type: ClusterIP
  selector:
    app: nextjs-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
